<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LauncherActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/first_tip"
        android:textSize="16sp" />

    <Button
        android:id="@+id/normal_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_service" />

    <Button
        android:text="@string/aidl_service"
        android:id="@+id/aidl_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

</LinearLayout>
