<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.pythoncat.ipcorservice.activity.NormalActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        app:popupTheme="@style/AppTheme.NoActionbar"
        app:theme="@style/AppTheme.NoActionbar"
        app:title="test toolbar"
        app:titleTextColor="@color/colorWhite" />

    <TextView
        android:id="@+id/normal_show_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:text="@string/show_about_normal_service"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/normal_show_stu_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:text="@string/tip_student"
        android:textSize="14sp" />

    <Button
        android:id="@+id/normal_ui_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/result_of_normal_service"
        tools:ignore="RtlHardcoded" />
</LinearLayout>
